# arcus

./: .clang-format  .gitignore  README.md  frames_2026-01-20_20.06.26.gv  frames_2026-03-28_05.09.50.gv
.github/workflows/: build_packages.yml  lint-cpp.yml
arcus_bringup/: CMakeLists.txt  package.xml
arcus_bringup/config/: sim.yaml
arcus_master/: CMakeLists.txt  package.xml
arcus_master/config/: master_node.yaml
arcus_master/launch/: master_node.launch.py
arcus_master/src/: master_node.cpp  master_node.hpp
arcus_msg/: CMakeLists.txt  package.xml
arcus_msg/msg/: ControllerType.msg  DemoMsg.msg  ErrorCode.msg
arcus_msg/srv/: DemoSrv.srv
arcus_msgs/: CMakeLists.txt  package.xml
arcus_msgs/msg/: ErrorCode.msg
costmap_maker/: CMakeLists.txt  package.xml
costmap_maker/config/: local_costmap.yaml
costmap_maker/include/: costmap_maker.hpp
costmap_maker/launch/: costmap_maker.launch.py
costmap_maker/src/: costmap_maker.cpp
documentation/: main.md  normes-programmation.md
documentation/code-and-simulation/: setup_up.md
drive_controller/: CMakeLists.txt  package.xml
drive_controller/launch/: drive_controller.launch.py
drive_controller/src/: drive_controller.cpp
gap_follow/: CMakeLists.txt  package.xml
gap_follow/config/: gap_follow.yaml
gap_follow/launch/: gap_follow.launch.py
gap_follow/src/: gap_follow.cpp  gap_follow.hpp
motor_sweep_test/: CMakeLists.txt  package.xml
motor_sweep_test/src/: motor_sweep_test.cpp
particle_filter/: CMakeLists.txt  package.xml
particle_filter/config/: localize.yaml
particle_filter/include/: particle_filter.h
particle_filter/launch/: localize_launch.py
particle_filter/maps/: slam_map_20260131_173626.pgm  slam_map_20260131_173626.yaml
particle_filter/src/: particle_filter.cpp
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/config/: pure_pursuit_params.yaml
pure_pursuit/launch/: pure_pursuit.launch.py
pure_pursuit/src/: pure_pursuit.cpp  pure_pursuit.hpp
range_libc/: CMakeLists.txt  main.cpp  package.xml
range_libc/includes/: CudaRangeLib.h  RangeLib.h  RangeUtils.h  lru_cache.h
resources/: waypoints.csv
resources/waypoints/: Spielberg_center.csv  inverse_waypoints.sh  speed_zones.csv  waypoints.csv
safety_node/: CMakeLists.txt  package.xml
safety_node/config/: safety_node.yaml
safety_node/launch/: safety_node.launch.py
safety_node/src/: safety_node.cpp  safety_node.hpp
scripts/: lint-apply.sh
scripts/RaceLine_Maker/: RaceLine_generator.py
scripts/RaceLine_Maker/saved/: map1.csv  raceline.csv
slam_map_saver/: package.xml  setup.cfg  setup.py
slam_map_saver/slam_map_saver/: slam_map_saver.py
slam_map_saver/slam_maps/: kingston_map.pgm  kingston_map.yaml  slam_map_20250928_220603.pgm  slam_map_20250928_220603.yaml  slam_map_20260314_130422.pgm  slam_map_20260314_130422.yaml  slam_map_20260321_141216.pgm  slam_map_20260321_141216.yaml  slam_map_20260325_015852.pgm  slam_map_20260325_015852.yaml  slam_map_20260326_233030.pgm  slam_map_20260326_233030.yaml  slam_map_20260327_201800.pgm  slam_map_20260327_201800.yaml  slam_map_20260327_202008.pgm  slam_map_20260327_202008.yaml  slam_map_20260328_013750.pgm  slam_map_20260328_013750.yaml  slam_map_20260328_031553.pgm  slam_map_20260328_031553.yaml  slam_map_20260328_045902.yaml  slam_map_20260415_004154.pgm  slam_map_20260415_004154.yaml  slam_map_20260428_001134.pgm  slam_map_20260428_001134.yaml
slam_ws/: .gitignore
slam_ws/src/f1tenth_gym_ros/config/: amcl.yaml  ekf.yaml  frames_2025-06-07_13.33.12.gv  mapper_params_online_async.yaml  sim.yaml  slam_toolbox_params.yaml
slam_ws/src/f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
slam_ws/src/f1tenth_gym_ros/launch/: amcl_launch.py  ekf_launch.py  gym_bridge_launch.py  slam_launch.py
slam_ws/src/fake_imu/: CMakeLists.txt  package.xml
slam_ws/src/fake_imu/src/: fake_imu_publisher.cpp
slam_ws/src/slam_map_saver/slam_map_saver/: slam_map_saver.py
track_zone_manager/: CMakeLists.txt  package.xml
track_zone_manager/config/: track_zone_manager.yaml
track_zone_manager/launch/: track_zone_manager.launch.py
track_zone_manager/src/: track_zone_manager.cpp
vesc/vesc_driver/params/: vesc_config.yaml
