<?xml version="1.0"?>
<package format="3">
  <name>arcus_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for robot localization and SLAM</description>

  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Imported packages -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>robot_localization</exec_depend>

</package>
